# dlib-esp-idf

./: .gitmodules  LICENSE  README.md
cxx_exceptions/: .cproject  .project
dlib-test/: .cproject  .project  CMakeLists.txt  sdkconfig
dlib-test/main/: CMakeLists.txt  main.cpp
